--- a/order-summary.css
+++ b/order-summary.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 .order-summary {
 	margin-top: 2em;
 	display: flex;
@@ -21,13 +25,37 @@
 .order-summary h2 {
 	margin-bottom: 0;
 }
-.order-summary p {
+.order-summary .description {
 	text-align: center;
 	font-size: 80%;
-	color: rgb(186, 186, 186);
+	color: rgb(169, 167, 167);
 	margin-top: 0.4em;
 }
 .note-and-price {
+	margin-top: 2em;
 	display: flex;
-	background-color: hotpink;
+	/* background-color: rgb(190, 99, 143); */
+	align-items: center;
+}
+.plan {
+	display: flex;
+	flex-direction: column;
+	align-items: left;
+}
+.plan > * {
+	margin: 0;
+	margin-right: 1.5em;
+}
+.note-container {
+	padding: 0.5em;
+	background-color: rgb(213, 213, 213);
+	border-radius: 100%;
+	width: 2em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-right: 1em;
+}
+.note-container > img {
+	width: 0.9em;
 }
